percona-postgresql-operator/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-ingress
  namespace: cafebot2
  annotations:
   # nginx.ingress.kubernetes.io/backend-protocol: "TCP"
   # haproxy.org/ingress.class: "haproxy"
   # haproxy.org/backend-config-snippet: |
   #   option http-keep-alive
   # haproxy.org/frontend-config-snippet: |
   #   acl restricted_acl path_beg -i /admin
   #   tcp-request content reject if restricted_acl

spec:
  ingressClassName: haproxy
  rules:
  - host: postgres.maniishere.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cafebot-pgbouncer
            port:
              number: 5432
