percona-postgresql-operator/pg-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-ingress
  namespace: cafebot
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: postgres.dev.cafebot.ai
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: cafebot-pgbouncer
            port:
              number: 5432
